hphp/hack/test/typecheck/reactive/rx_flavored_functions2.php.exp
File "rx_flavored_functions2.php", line 11, characters 27-27:
Invalid argument (Typing[4203])
File "rx_flavored_functions2.php", line 4, characters 13-21:
This function is shallow reactive.
File "rx_flavored_functions2.php", line 11, characters 27-27:
This function is local reactive.
